--- a/CB_writeup.Rnw
+++ b/CB_writeup.Rnw
@@ -21,8 +21,36 @@ Both the decennial survey and the ACS data are used in part by federal, state an
 \\
 We will discuss how the ACS data is structured when we request data and how to access data from the Census Bureau's online developer's API.  We will also discuss what kind of variables are available and some limitations with the API.  We will base this discussion on a paper by \citet{stangl:2013} as a starting point on some of the limitations of the API.  This article explores some multivariate frequency distributions using data from the ACS dataset; however, there are some gaps in what we can access and inconsistencies in the database.
 
+\section{Requesting Data}
+To access data from the census bureau online API we need to construct a proper HTTP GET request.  A valid GET request is formed through a constructed web URL and we specify which dataset, year, variable and geographies that we are requesting.  The basic structure of an HTTP GET request for the decennial census and for the ACS is as follows:
+\begin{verbatim}
+http://api.census.gov/data/[YEAR]/[DATASET]?key=[DEVELOPER'S KEY]&get=[VARIABLES]&for=[GEOGRAPHY]
+\end{verbatim}
+$[$DEVELOPER'S KEY$]$ is an id code required to perform a valid GET request.  A developer's key uniquely identifies everyone who requests data from the API.  Requesting a key can be done by registering at \url{http://www.census.gov/developers/tos/key_request.html}.\\
+\\
+$[$YEAR$]$ and $[$DATASET$]$ specify the dataset and year of the data requested.  The available datasets include the decennial census and the ACS.  The ACS datasets are available in 1-year, 3-year and 5-year timeframes.  The $[$YEAR$]$ variable for the ACS datasets indicates the final year in the timeframe.  For example, the 2012 5-year ACS dataset this is the ACS dataset that spans 2008-2012 and the 2012 3-year ACS dataset is the ACS dataset that spans 2010-2012.  For the decennial census the $[$YEAR$]$ indicates the year the census data was collected.  When we request a $[$DATASET$]$ we use abbreviations for the dataset we want: the ACS 5-year dataset is $acs5$.  See table \ref{tab:datasettable} to see which timeframes are available for each dataset and the abbreviations.\\
+<<datasettable, echo=FALSE, warning=FALSE, message=FALSE, results='asis'>>=
+library(xtable)
+sets = data.frame(DATASETS = c("Decennial Census", "ACS 5-year", "ACS 3-year", "ACS 1-year"),
+                  YEAR = c("1990, 2000, 2010", "2010, 2011, 2012", "2011, 2012", "2011, 2012"),
+                  abbr = c("sf1", "acs5", "acs3", "acs1"))
+
+tabl = xtable(sets, label="tab:datasettable", caption="Datasets and Years")
+print(tabl, include.rownames=FALSE)
+@
+If we wanted to request some data from the 2010 decennial census we would format our HTTP GET request as follows:
+\begin{verbatim}
+http://api.census.gov/data/2010/sf1?key=[DEVELOPER'S KEY]&get=[VARIABLES]&for=[GEOGRAPHY]
+\end{verbatim}
+Similarly requesting data from the 2011 ACS 3-year dataset would require the following HTTP GET request:
+\begin{verbatim}
+http://api.census.gov/data/2011/acs3?key=[DEVELOPER'S KEY]&get=[VARIABLES]&for=[GEOGRAPHY]
+\end{verbatim}
+$[$GEOGRAPHY$]$ describes the geographic region and $[$VARIABLES$]$ specifies the demographic variables of interest.  Specifying a correct geographic region and search for available demographic variables require a more detailed knowledge of how the census datasets are organized.  We discuss geographies in section \ref{sec:geo} and variables in section \ref{sec:var}.  We also discuss how the data is formatted and structured in section \ref{sec:var}.
+
 \section{Geography}
-The Census Bureau has a very sophisticated system of hierarchy for geography.  For the ACS, at the top level there is the entire nation, followed by region, division, state, county, county-subdivision, tract, block group, place, congressional district, zip code area, school district and a few other geographic divisions.  See table \ref{tab:geolist} for a complete table of geographies available on the census API for the 2012 ACS.\\
+\label{sec:geo}
+The Census Bureau has a very sophisticated system of hierarchy for geographic entities.  For the ACS, at the top level there is the entire nation, followed by region, division, state, county, county-subdivision, tract, block group, place, congressional district, zip code area, school district and a few other geographic divisions.  See table \ref{tab:geolist} for a complete table of geographic entities available on the census API for the 2012 ACS.\\
 
 <<geotable, echo=FALSE, warning=FALSE, message=FALSE, eval=FALSE>>=
 #http://api.census.gov/data/2012/acs5/geo.html
@@ -30,43 +58,43 @@ library(xtable)
 library(XML)
 ta = readHTMLTable("http://api.census.gov/data/2012/acs5/geo.html")[[1]]
 ta = ta[,-3]
-tabl = xtable(ta)
+tabl = xtable(ta, label="tab:geolist")
 caption(tabl) = "List of valid geographic combinations"
+# print(tabl, include.rownames=FALSE)
 @
 \begin{table}[ht]
 \centering
-\begin{tabular}{rll}
+\begin{tabular}{ll}
   \hline
- & Summary Level & Description \\ 
+Summary Level & Description \\ 
   \hline
-  1 & 010 & us \\ 
-  2 & 020 & region \\ 
-  3 & 030 & division \\ 
-  4 & 040 & state \\ 
-  5 & 050 & state-county \\ 
-  6 & 060 & state-county-county subdivision \\ 
-  7 & 140 & state-county-tract \\ 
-  8 & 150 & state-county-tract-block group \\ 
-  9 & 160 & state-place \\ 
-  10 & 250 & american indian area/alaska native area/hawaiian home land \\ 
-  11 & 310 & metropolitan statistical area/micropolitan statistical area \\ 
-  12 & 320 & state-metropolitan statistical area/micropolitan statistical area \\ 
-  13 & 330 & combined statistical area \\ 
-  14 & 340 & state-combined statistical area \\ 
-  15 & 350 & new england city and town area \\ 
-  16 & 400 & urban area \\ 
-  17 & 500 & state-congressional district \\ 
-  18 & 510 & state-congressional district-county \\ 
-  19 & 610 & state-state legislative district (upper chamber) \\ 
-  20 & 620 & state-state legislative district (lower chamber) \\ 
-  21 & 795 & state-public use microdata area \\ 
-  22 & 860 & zip code tabulation area\\
-  23 & 950 & state-school district (elementary) \\ 
-  24 & 960 & state-school district (secondary) \\ 
-  25 & 970 & state-school district (unified) \\ 
+010 & us \\ 
+  020 & region \\ 
+  030 & division \\ 
+  040 & state \\ 
+  050 & state-county \\ 
+  060 & state-county-county subdivision \\ 
+  140 & state-county-tract \\ 
+  150 & state-county-tract-block group \\ 
+  160 & state-place \\ 
+  250 & american indian area/alaska native area/hawaiian home land \\ 
+  310 & metropolitan statistical area/micropolitan statistical area \\ 
+  320 & state-metropolitan statistical area/micropolitan statistical area \\ 
+  330 & combined statistical area \\ 
+  340 & state-combined statistical area \\ 
+  350 & new england city and town area \\ 
+  400 & urban area \\ 
+  500 & state-congressional district \\ 
+  510 & state-congressional district-county \\ 
+  610 & state-state legislative district (upper chamber) \\ 
+  620 & state-state legislative district (lower chamber) \\ 
+  795 & state-public use microdata area \\ 
+  950 & state-school district (elementary) \\ 
+  960 & state-school district (secondary) \\ 
+  970 & state-school district (unified) \\ 
    \hline
 \end{tabular}
-\caption{List of valid geographic combinations}
+\caption{List of valid geographic combinations for 2012 ACS 5-year}
 \label{tab:geolist}
 \end{table}
 
@@ -74,31 +102,40 @@ From table \ref{tab:geolist}, the hierarchy for geographic regions is very speci
 \begin{verbatim}
 {
   "name": "tract",
-  "requires:" [
+  "requires": [
     "state",
     "county"
   ],
   "optionalWithWCFor": "county"
 }
 \end{verbatim}
-This JSON file specifies that for census tract level geography we are required to specify a state.  Additionally we can also specify both a state and a county.\\
+This JSON file specifies that for census tract level geography we are always required to specify a state.  We are required to specify a county in certain cases.  For a valid HTTP GET request corresponding to the above JSON information the $[$GEOGRAPHY$]$ must be formatted as follows:
+\begin{verbatim}
+tract:*&in=state:01
+tract:*&in=state:01+county:01
+\end{verbatim}
+In the first GET request we are requesting data for all census tracts in Alabama.  The second GET request is for all census tracts in Autauga County, Alabama.  Due to how census tracts are labelled, if we are interested in a specific census tract we must specify both a state and county:
+\begin{verbatim}
+tract:020400&in=state:01+county:01
+\end{verbatim}
+In this GET request we are requesting data for census tract 020400.  Note we must specify both state and county because there can be multiple census tracts labelled "020400" among different counties and states.\\
 \\
-Alternatively, the geographic information is available in XML.  XML stands for Extensible Markup Language and is similar in structure to the HTML format used for webpages.  XML is another format for sending and storing data.  It is formatted in a tree-like structure with a hierarchy of categories with associated values.  Here is the same geographic area information formatted in XML:
+The same geographic information is also available in XML.  XML stands for Extensible Markup Language and is similar in structure to the HTML format used for webpages.  XML is another format for sending and storing data.  It is formatted in a tree-like structure with a hierarchy of categories with associated values.  Here is the same geographic area information formatted in XML:
 \begin{verbatim}
 <fips name="tract">
   <requires name="state"/>
   <requires name="county" is-optional-with-wcfor="true"/>
 </fips>
 \end{verbatim}
-In the following example, we will examine various geographies available from the online API for the state of California.\\
-<<state, echo=FALSE, warning=FALSE, message=FALSE, fig.height=3, cache=TRUE, fig.cap='California selected'>>=
+In the following examples, we will examine various geographies available from the online API and their corresponding HTTP GET requests.  We will use the United States as a whole and various geographic areas within the state of California for our examples.\\
+<<state, echo=FALSE, warning=FALSE, message=FALSE, fig.height=3, cache=TRUE, fig.cap='California Selected'>>=
 library(ggplot2)
 states.map = map_data("state")
 states.map$CA = states.map$region=="california"
 qplot(long, lat, data=states.map, group=group, order=order, geom="polygon", fill=CA) + 
   theme(legend.position = "none")
 @
-At the top of the hierarchy we can view data at the country level; this is data aggregated among all states and corresponds to summary level 010 from table \ref{tab:geolist}.  Below that we can view data by state.  At the state level we can view data for all states or select a particular state; this is summary level 040.  In figure \ref{fig:state} we have selected California.\\
+At the top of the hierarchy we can view data at the country level; this is data aggregated among all states and corresponds to summary level 010 from table \ref{tab:geolist}.  Below that we can view data by state.  At the state level we can view data for all states or select a particular state; this is summary level 040.  In figure \ref{fig:state} we have selected California with the and this corresponds to a $[$GEOGRAPHY$]$ of \textit{state:06}.\\
 
 <<county, echo=FALSE, warning=FALSE, message=FALSE, fig.height=3, cache=TRUE, fig.cap='Los Angeles county selected'>>=
 counties.map = map_data("county")
@@ -107,7 +144,7 @@ counties.map[counties.map$region=="california" & counties.map$subregion=="los an
 qplot(long, lat, data=counties.map, group=group, order=order, geom="polygon", fill=factor(CA)) + 
   theme(legend.position = "none")
 @
-Below states we can select counties and census tracts.  At the county level, after we specify California we can look at counties within California (summary level 050).  We can see from figure \ref{fig:county} that we have selected Los Angeles county within California state.  There are a few other geographic regions we can subset by within a state such as ZIP code tabulation area; we could have selected 90210 which corresponds to Beverly Hills, California.\\
+Below states we can select counties and census tracts.  At the county level, after we specify California we can look at counties within California (summary level 050).  We can see from figure \ref{fig:county} that we have selected Los Angeles county within California state.  For a corresponding HTTP GET request the $[$GEOGRAPHY$]$ is \textit{county:037$\&$in=state:06}.  There are a few other geographic regions we can subset by within a state such as ZIP code tabulation area; we could have selected 90210 which corresponds to Beverly Hills, California.  The required $[$GEOGRAPHY$]$ for selecting 90210 is \textit{zip+code+tabulation+area:90210}.\\
 <<censustractstate, echo=FALSE, warning=FALSE, message=FALSE, out.width="3in", cache=TRUE, fig.show='hold', fig.cap='Pasadena county subdivision selected'>>=
 library(maptools)
 ca.tracts = readShapeSpatial("tl_2013_06_cousub.shp")
@@ -129,9 +166,12 @@ Another complication is that not all geographic divisions are compatible.  That 
 %Insert Iowa example here
 \\
 \\
-For a more detailed look at which geographies need to be specified, refer to the census bureau list of summary levels for each dataset or the XML or JSON geography files.  For the 2012 ACS dataset this is located at \url{http://api.census.gov/data/2012/acs5/geo.html}, the XML file is located at \url{http://api.census.gov/data/2012/acs5/geography.xml} and the JSON file is located at \url{http://api.census.gov/data/2012/acs5/geography.json}.  Currently there are three types of datasets available from the online API: the decennial census, the ACS and economic indicator time series data.
+Please note that certain datasets might not have available all geographies and might require a different specification of geography.  For example, in the 2010 decennial census if our geographic area is zip code tabulation areas then we are required to specify states.  By contrast, the 2012 ACS 5-year dataset has zip code tabulation areas but we do not need to specify states.  The 2010 ACS 5-year dataset simply does not have zip code tabulation areas available.\\
+\\
+For a more detailed look at which geographies need to be specified, refer to the census bureau list of summary levels for each dataset or the XML or JSON geography files.  For the 2012 ACS dataset this is located at \url{http://api.census.gov/data/2012/acs5/geo.html}, the XML file is located at \url{http://api.census.gov/data/2012/acs5/geography.xml} and the JSON file is located at \url{http://api.census.gov/data/2012/acs5/geography.json}.    
 
 \section{Finding Data Sets and Tables}
+\label{sec:var}
 A recent addition to the Census Bureau API is the inclusion of a master index of available dataset formatted in both JSON and XML.  The JSON file is available online at \url{http://api.census.gov/data.json} and the XML file is available online at \url{http://api.census.gov/data.xml}.  This master index includes necessary meta-information about each dataset including description, links to geography and variable information and contact information for maintainer of datasets.  The JSON format is formatted as follows:
 \begin{verbatim}
 {
@@ -207,15 +247,8 @@ This describes sub-table 056E of concept B27001.  This is a table of 75 and olde
   concept="B27001. Health Insurance Coverage Status by Sex by Age"/>
 \end{verbatim}
 
-\section{Requesting Data and Table Structure}
-To actually get data from the census bureau online API we need to construct a proper HTTP GET request.  A valid GET request is formed through a constructed web URL and we specify which dataset, year, variable and geographies that we are requesting.  The basic structure of an HTTP GET request for the decennial census and for the ACS is as follows:
-\begin{verbatim}
-http://api.census.gov/data/[YEAR]/[DATASET]?key=[DEVELOPER'S KEY]&get=[VARIABLES]&for=[GEOGRAPHY]
-\end{verbatim}
-
-
 \section{Limitations}
-The dataset used by Morgan, Cetinkaya-Rundel and Stangl in "Taking a Chance in the Classroom: The American Community Survey" is a random subset of the 2010 ACS public use microdata sample.  This article contains a number of classroom exercises that ask the reader to calculate some basic proportions about various demographic data.  We will attempt to use the Census Bureau online API to examine the same demographic variables.\\
+The dataset used by \citet{stangl:2013} is a random subset of the 2010 ACS public use microdata sample.  This article contains a number of classroom exercises that ask the reader to calculate some basic proportions about various demographic data.  We will attempt to use the Census Bureau online API to examine the same demographic variables.\\
 \\
 Using the Census Bureau's online API for these exercises presents us three main problems.  The first problem is the structure of how the data is organized in the public use microdata sample versus how the data is organized in the online API.  The second problem is that the census does not provide proportions and finding standard errors for these proportions requires a bit more work.  Finally, the third problem is that certain combination of variables are simply not available from the online API.
 <<table, echo=FALSE, warning=FALSE, message=FALSE, cache=TRUE, results="asis", fig.cap='Subset of data used in Chance Article'>>=
