--- a/CB_writeup.Rnw
+++ b/CB_writeup.Rnw
@@ -278,13 +278,41 @@ states = geo.make(state = "*")
 dat = acs.fetch(endyear = 2012, span = 5, geography = states, table.number="B27001")
 dat2 = acs.fetch(endyear = 2012, span = 5, geography = states, table.number="B27001", col.names="pretty")
 
-tab1 = xtable(head(dat@estimate[,1:5]), label="fig:example", caption="Health Insurance Coverage information from Online API")
+dat.table = data.frame(dat@estimate[,1:5])
+names(dat.table) = c("Total", "M Total", "M<6", "M<6 w/insurance", "M<6 w/o insurance")
+
+tab1 = xtable(head(dat.table), label="fig:example", caption="Health Insurance Coverage information from Census API.  Each of the M columns indicate male, subsequent numbers indicate age; there are corresponding F columns for females that is not shown to conserve space.")
 digits(tab1) = rep(0,6)
 print(tab1)
 @
 By contrast the online API does not provide individual specific data.  When we perform a HTTP GET request we must specify what geographic level of detail we want.  The geographic level of detail does not go below the county subdivision or census tract level.  Instead of individual specific data we have data that has been aggregated for an entire geographic region.  This is likely due to privacy reasons; if we have individual specific data for a dozen demographic variables along with geographic information it might be possible to reveal this individual's identity.  \\
 \\
-In table \ref{fig:example} we specify state level summaries for table variable B27001.  Table variable B27001 is health insurance coverage status for various age groups grouped by gender.  Each column in table \ref{fig:example} is a sub-table on B27001.  From left-to-right, the variables in table \ref{fig:example} are: 
+In table \ref{fig:example} we specify state level summaries for health insurance coverage status for various age groups by gender (from the census API this is table B27001).  Each variable is in the form of a table is referred to as a $concept$ and each column in table \ref{fig:example} is referred to as a $label$.  The first label of each concept is an overall total subsequent labels are subsets of this overall total.  We've conveniently renamed column headers in table \ref{fig:example}; the naming convention from data provided by the API is to enumerate each  with the table name $B27001\_001$, $B27001\_002$ etc.\\
+\\
+The way this data is organized is not tidy $<$include hadley tidy data reference$>$.  Instead it appears that the columns contain additional categorical information: gender, age and insurance.  In table \ref{fig:tidy} we have tidied up the data so that each row is an observation and each column is a variable.  Originally table B27001 contains a number of $total$ columns: overall total, total number of males, total number of females, and within each gender a total number of people within an age group.  In reshaping this data, we felt that these total columns were redundant once the data is in a tidy form.  
+<<melted, echo=FALSE, warning=FALSE, message=FALSE, cache=TRUE, results="asis">>=
+library(reshape2)
+dat.tidy = data.frame(dat2@estimate)
+dat.tidy$state = rownames(dat.tidy)
+rownames(dat.tidy) = NULL
+names(dat.tidy) = gsub("Health.Insurance.Coverage.Status.by.Sex.by.Age..", "", names(dat.tidy))
+dat.tidy = dat.tidy[,c(grep("health.insurance", names(dat.tidy)),58)]
+dat.tidy.melt = melt(dat.tidy, id='state')
+
+v = strsplit(as.character(dat.tidy.melt$variable), "\\.\\.")
+v = data.frame(matrix(unlist(v), nrow=1872, byrow=T))
+names(v) = c("gender", "age", "insurance")
+levels(v$insurance) = c("no", "yes")
+levels(v$age) = c("18-24", "25-34", "35-44", "45-54", "55-64", "6-17", "65-74", "75+", "<6")
+levels(v$gender) = c("f", "m")
+
+final = data.frame(state = dat.tidy.melt$state, gender = v$gender, age = v$age, insurance = v$insurance, freq = dat.tidy.melt$value)
+
+tab2 = xtable(head(final), label="fig:tidy", caption="Reshaped Health Insurance Coverage data.")
+digits(tab2) = rep(0,6)
+print(tab2)
+@
+
 
 <<var, echo=FALSE>>=
 #example1: (chance #3, #5)
